SubVersion: $Id$

- 25/08/2005, version 2.01:
	- [roms] $1689: fixed Titanium skin loading and fixed bug in skin loader
	- [roms] $1692: re-enabled transient mode for windows

- 19/08/2005, version 2.00:
	- [kevin] $1662/1663: import V200 updates as HW2, not HW1 (and default TI-89/92+ updates to HW2)
	- [roms] $1666: use Titanium and V200 skins when available (else fallbacks)
	- [roms] $1667: fixed large column in the I/O port view
	- [roms] $1668: new function in the mem window (read address and dis-assemble at)
	- [roms] $1672: fixed 'Set PC to selection' command by adding a call to fill_prefetch_slow()
	- [roms] $1673: update ASCII column (dbg wnd) after cell editing
	- [roms] $1676: ask for 'Clear RAM' when reseting calc (O. Armand request)
	- [kevin] $1680/1681: fix buffer underflow in iodefs.c

- 03/08/2005, version 2.00-rc8:
	- [roms]  $1615: TiEmu retains the state of dbg windows (open/closed) now.
	- [kevin] $1623/1624: fixed: only first 32 bytes of ram_exec were restored from savestate
	- [kevin] $1625/1626: buffering grayscale planes to avoid blinking in double-buffered games
	- [roms]  $1627: put all gscales extern into gscales.h
	- [roms]  $1629: added new I/O ports window which let view/modify HW registers
	- [roms]  $1648: fixed buffer overflow in RTC HW3 and disabled full screen mode (too slow)
	- [roms]  $1651: avoid link port acces in I/O window and don't allow writing on RO registers

- 16/07/2005, version 2.00-rc7:
	- [roms] $1583: fixed PPhD's bug (no reload of ROM calls when upgrading)
	- [roms] $1585: fixed comm box (removed calc & autodetect because un-needed)
	- [roms] $1586: fixed file patterns in file selector (case sensitivity)
	- [roms] $1588: avoid linkport accesses when browsing memory from dbg window
	- [roms] $1590: fixed severe bug in linkport (the status register was reset whenever read
		like specified by TI but the int handler proves it's false).
		TiEmu does not run an infinite loop when transfer is interrupted.